#13 First attempt: openjdk:jre-slim is used