@@ -1,4 +1,4 @@
-FROM archlinux
+FROM archlinux as builder
 
 # Download database files
 RUN pacman -Sy
@@ -24,5 +24,20 @@ RUN mvn package
 RUN archlinux-java unset
 RUN pacman -S jdk-openjdk --noconfirm
 
-# Entrypoint (execute Kex)
-ENTRYPOINT ["/home/kex/kex.sh"]
+## Entrypoint (execute Kex)
+#ENTRYPOINT ["/home/kex/kex.sh"]
+
+FROM openjdk:jre-slim
+COPY --from=builder /home/kex/kex-runner/target/kex-runner-*-jar-with-dependencies.jar /kex/kex-runner.jar
+COPY --from=builder /home/kex/kex.ini /kex/kex.ini
+COPY --from=builder /home/kex/kex.policy /kex/kex.policy
+COPY --from=builder /home/kex/runtime-deps /kex/runtime-deps
+WORKDIR /kex
+ENTRYPOINT ["java", \
+    "-Xmx8g", \
+    "-Djava.security.manager", \
+    "-Djava.security.policy==kex.policy", \
+    "-Dlogback.statusListenerClass=ch.qos.logback.core.status.NopStatusListener", \
+    "-jar", "kex-runner.jar" \
+]
+
